[package]
name = "incrementor"
version = "0.1.0"
authors = ["Tom Warner <tomwamt@gmail.com>"]
edition = "2018"

[dependencies]
actix-web = "1.0"
postgres = { version = "0.15", features = ["with-uuid"] }
r2d2 = "0.8"
r2d2_postgres = "0.14"
uuid = { version = "0.5", features = ["serde", "v4"] }
serde = "1.0"
