[package]
name = "incrementor"
version = "0.1.0"
authors = ["Tom Warner <tomwamt@gmail.com>"]
edition = "2018"

[dependencies]
actix-web = "1.0"
base64 = "0.10"
log = "0.4"
postgres = { version = "0.15", features = ["with-uuid"] }
r2d2 = "0.8"
r2d2_postgres = "0.14"
rand = "0.7"
serde = "1.0"
sha2 = "0.8"
simple_logger = "1.3"
uuid = { version = "0.5", features = ["serde", "v4"] }
